change title from h3 to h4 & fix spacing

--- a/src/renderer/components/task/style.module.scss
+++ b/src/renderer/components/task/style.module.scss
@@ -3,7 +3,7 @@
 .task__item {
   display: flex;
   gap: 2rem;
-  padding: 16px 30px;
+  padding: 16px;
   align-items: center;
   border-bottom: 1px solid $primary;
 
@@ -11,7 +11,7 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.5rem;
 
     & .task__title {
       color: $dark;
